# ai-multi-agent-systems

./: .cursorrules  .gitignore  AGENTS.md  Dockerfile  README.md  benchmark.py  build_searchclient.ps1  build_searchclient.sh  devenv.nix  flake.nix  grupazupa.zip.out  report.md  results.md  run_on_hpc.sh  searchclient  work_division.md
searchclient_cpp/: .gitignore  CMakeLists.txt  Makefile  build_debug.sh  build_release.sh  clean.sh  flamegraph.svg.old  input.txt  out.folded.manual_test  readme-searchclient.md  readme-searchclient.txt  run_tests.sh  searchclient  valgrind-out.txt
searchclient_cpp/include/: CBSConflict.hpp  ConflictBasedSearcher.hpp  Constraint.hpp  HeuristicCalculator.hpp  HighLevelNode.hpp  LowLevelSearcher.hpp  SCPHeuristicCalculator.hpp  SingleBoxPDBHeuristicCalculator.hpp  action.h  action.hpp  agent.hpp  box.hpp  box_bulk.hpp  cbs.hpp  cell2d.hpp  chargrid.hpp  color.h  color.hpp  conflict.hpp  constraint.hpp  entity.hpp  entity_bulk.hpp  feature_flags.hpp  frontier.h  frontier.hpp  goal.hpp  graphsearch.h  graphsearch.hpp  helpers.hpp  heuristic.h  heuristic.hpp  join.hpp  level.hpp  low_level_state.hpp  memory.hpp  point2d.hpp  state.h  state.hpp  string_manip_helpers.hpp  utils.hpp
searchclient_cpp/src/: ConflictBasedSearcher.cpp  HeuristicCalculator.cpp  LowLevelSearcher.cpp  SCPHeuristicCalculator.cpp  SingleBoxPDBHeuristicCalculator.cpp  action.cpp  action.hpp  agent.cpp  cbs.cpp  color.cpp  color.hpp  frontier.cpp  graphsearch.cpp  helpers.cpp  heuristic.cpp  level.cpp  memory.cpp  searchclient.cpp  state.cpp  utils.cpp
(+86 files in other folders)
